<resources>
    <string name="app_name">Biz Insights</string>
    <string name="text_first_name">First name</string>
    <string name="hint_first_name">First name</string>
    <string name="text_last_name">Last name</string>
    <string name="hint_last_name">Last name</string>
    <string name="text_address">Address</string>
    <string name="hint_address">Address</string>
    <string name="text_email">Email</string>
    <string name="hint_email">Email</string>
    <string name="text_mobile">Mobile No.</string>
    <string name="hint_mobile">Mobile No.</string>
    <string name="text_password">Password</string>
    <string name="hint_password">Password</string>
    <string name="btn_register">Register</string>
    <string name="already_have_account">Already have account?</string>
    <string name="text_username">Username</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="avatar">avatar</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="text_confirm_password">Confirm password</string>
    <string name="msg_first_name_empty">First name can not be empty</string>
    <string name="msg_last_name_empty">Last name can not be empty</string>
    <string name="msg_address_empty">Address can not be empty</string>
    <string name="msg_email_empty">"Email can not be empty "</string>
    <string name="msg_email_invalid">Email is Invalid!</string>
    <string name="msg_mobile_no_empty">Mobile number can not be empty</string>
    <string name="msg_mobile_no_invalid">Mobile number is Invalid!</string>
    <string name="msg_password_empty">Password can not be empty</string>
    <string name="msg_password_invalid">Password is Invalid!</string>
    <string name="msg_confirm_password_empty">Confirm password can not be empty</string>
    <string name="msg_confirm_password_invalid">Confirm password is Invalid!</string>
    <string name="msg_password_not_matched">Password and Confirm password not matched!</string>
    <string name="msg_registration_failed">Registration Failed!</string>
    <string name="msg_login_failed">Login Failed!</string>
    <string name="msg_username_empty">Username can not be empty</string>
    <string name="msg_login_success">Login Success</string>
    <string name="password_requirement">Password must Contain 1 Uppercase, 1 Lowercase, 1 Number, 1 Spacial character.</string>
    <string name="user_list">User list</string>
    <string name="toolbar">Toolbar</string>
    <string name="user_name">Firstname Lastname</string>
    <string name="user_email">email@mail.com</string>
    <string name="user_mobile_no">7069236002</string>
    <string name="user_address">At.Post Munsad(Padar faliyu), Via. Ganesh Sisodra, Ta.Dist. Navsari - 396463</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
</resources>