<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_20sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/imageView">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:weightSum="2">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:text="@string/text_first_name" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/rect"
                        android:elevation="@dimen/_2sdp"
                        android:hint="@string/hint_first_name"
                        android:inputType="textPersonName"
                        android:padding="@dimen/_8sdp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"

                        android:text="@string/text_last_name" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/rect"
                        android:elevation="@dimen/_2sdp"
                        android:hint="@string/hint_last_name"
                        android:inputType="textPersonName"
                        android:padding="@dimen/_8sdp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:text="@string/text_address" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/rect"
                        android:drawableStart="@drawable/ic_baseline_pin_drop_24"
                        android:drawablePadding="@dimen/_5sdp"
                        android:elevation="@dimen/_2sdp"
                        android:hint="@string/hint_address"
                        android:inputType="textMultiLine"
                        android:maxLines="3"
                        android:minLines="2"
                        android:padding="@dimen/_8sdp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:text="@string/text_email" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/rect"
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:drawablePadding="@dimen/_5sdp"
                        android:elevation="@dimen/_2sdp"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_8sdp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:text="@string/text_mobile" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/rect"
                        android:digits="0123456789"
                        android:drawableStart="@drawable/ic_baseline_smartphone_24"
                        android:drawablePadding="@dimen/_5sdp"
                        android:elevation="@dimen/_2sdp"
                        android:hint="@string/hint_mobile"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:padding="@dimen/_8sdp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:text="@string/text_password" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/rect"
                        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                        android:drawablePadding="@dimen/_5sdp"
                        android:elevation="@dimen/_2sdp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:padding="@dimen/_8sdp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:text="@string/text_confirm_password" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/rect"
                        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                        android:drawablePadding="@dimen/_5sdp"
                        android:elevation="@dimen/_2sdp"
                        android:hint="@string/hint_confirm_password"
                        android:inputType="textPassword"
                        android:padding="@dimen/_8sdp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rect"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:elevation="@dimen/_2sdp"
                    android:text="@string/btn_register"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_account"
                        android:textSize="@dimen/_14ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="@string/text_login"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="@dimen/_14ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>